[package]
name = "phdb_create_images_zip"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lambda_runtime = "0.7.3"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
tokio = { version = "1.10.1", features = ["macros", "rt-multi-thread","sync"] }
image-combiner = {git="https://github.com/sinyo-matu/image-combiner",version="0.1.12"}
serde = "1.0.130"
serde_json = "1.0.67"
zip = "2.2.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls","json"] }
bytes = "1.7.1"
