[package]
name = "phdb_create_images_zip"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lambda_runtime = "0.14.4"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.106"
tokio = { version = "1", features = ["macros", "rt-multi-thread","sync"] }
serde = "1"
serde_json = "1"
zip = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls","json"] }
thiserror = "2"
